--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
+:root {
+	--First-color: #00317a;
+	--Second-color: #123468;
+	--Third-color: #214685;
+	--Fourth-color: #dcdcdc;
+	--Fifth-color: #81bcba;
+}
+
 * {
 	padding: 0;
 	margin: 0;
@@ -19,6 +27,7 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
 }
+
 textarea,
 input {
 	padding: 10px;
@@ -37,14 +46,21 @@ ul,
 li {
 	margin-bottom: 0 !important;
 }
+
 a {
 	text-decoration: none;
 	color: #333;
 }
+
+.nav__title {
+	color: var(--Second-color);
+}
+
 a:hover {
 	text-decoration: none;
 	color: #333;
 }
+
 nav {
 	background-color: #ffffff;
 	width: 100%;
@@ -55,14 +71,16 @@ nav {
 	align-items: center;
 	border-bottom: 1px solid #dbdbdb;
 }
+
 .nav__left {
 	width: 12rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 }
+
 nav button {
-	background: #333;
+	background: var(--Second-color);
 	color: #fff;
 	width: 80px;
 	padding: 3px 0;
@@ -70,26 +88,30 @@ nav button {
 	cursor: pointer;
 	transition: ease 0.2s;
 }
+
 nav button:hover {
 	background-color: #fff;
-	color: #333;
+	color: var(--Fifth-color);
 }
+
 .InstaLogo {
 	height: 2.5rem;
 }
+
 footer {
 	width: 100%;
-	background-color: #333;
+	background-color: var(--Fifth-color);
 	color: #fff;
 	height: 10rem;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	position: relative;
 	bottom: 0;
 	overflow: hidden;
 }
+
 .footer__left {
 	height: 100%;
 	width: 35%;
@@ -97,18 +119,22 @@ footer {
 	display: flex;
 	justify-content: space-around;
 }
+
 .footer__logo {
 	padding-top: 20px;
 }
+
 .footer__logo h2 {
 	color: #fff;
 }
+
 .footer__description {
 	text-align: center;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
+
 .footer__mid {
 	height: 100%;
 	width: 30%;
@@ -118,6 +144,7 @@ footer {
 	justify-content: center;
 	align-items: center;
 }
+
 .footer__right {
 	height: 100%;
 	width: 30%;
@@ -128,6 +155,9 @@ footer {
 	align-items: center;
 }
 
+.footer__pages {
+	color: #fff;
+}
 .loggedIn {
 	margin-right: 40px;
 	display: flex;
@@ -136,6 +166,62 @@ footer {
 }
 .userName {
 	margin-right: 5px;
+}
+.userName__right {
+	display: flex;
+	align-items: center;
+}
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 140px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	padding: 12px 18px;
+	z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
+}
+
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 100px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	padding: 0px 12px;
+	z-index: 1;
+}
+.dropdown-content p {
+	font-size: 14px;
+}
+.dropdown-content p:hover {
+	cursor: pointer;
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
+}
+.loggedIn {
+	margin-right: 40px;
+	display: flex;
+	flex-direction: row-reverse;
+	justify-content: space-between;
+}
+.userName {
+	margin-right: 20px;
 }
 .userName__right {
 	display: flex;
