--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -97,7 +97,7 @@
 	text-align: center;
 }
 
-@media screen and (max-width: 480px) and (min-width: 320px) {
+@media screen and (max-width: 480px) and (min-width: 280px) {
 	.profiles {
 		flex-direction: column;
 	}
@@ -212,16 +212,17 @@
 	height: 380px;
 	margin: 10px;
 	padding: 2rem;
-	padding-top: 5rem;
+	/* padding-top: 5rem; */
 }
 .content p {
-	border-left: 10px solid #ccc;
-	padding-left: 30px;
+	/* border-left: 10px solid #ccc; */
+	/* padding-left: 30px; */
+
 	font-size: 1.5rem;
 }
 
 .author {
-	margin-top: 30px;
+	margin-top: 3rem;
 }
 .author img {
 	width: 75px;
