--- a/src/style.css
+++ b/src/style.css
@@ -47,9 +47,14 @@ li {
 	margin-bottom: 0 !important;
 }
 
-a {
+nav a {
 	text-decoration: none;
-	color: #333;
+	color: var(--First-color);
+	font-size: 1.4rem;
+	font-family: 'Sansita Swashed', cursive;
+}
+.home__nav_btn {
+	margin-right: 2rem;
 }
 
 .nav__title {
@@ -58,44 +63,46 @@ a {
 
 a:hover {
 	text-decoration: none;
-	color: #333;
+	color: var(--Fifth-color);
 }
 
 nav {
-	background-color: #ffffff;
+	background-color: var(--Fourth-color);
 	width: 100%;
-	height: 3rem;
+	height: 12vh;
 	display: flex;
 	padding: 0 0.5rem;
 	justify-content: space-between;
 	align-items: center;
 	border-bottom: 1px solid #dbdbdb;
 }
-
 .nav__left {
 	width: 12rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 }
-
 nav button {
-	background: var(--Second-color);
-	color: #fff;
+	background: var(--Fifth-color);
+	color: var(--Fourth-color);
 	width: 80px;
 	padding: 3px 0;
 	border-radius: 4px 4px;
 	cursor: pointer;
 	transition: ease 0.2s;
 }
-
 nav button:hover {
-	background-color: #fff;
-	color: var(--Fifth-color);
+	background-color: var(--First-color);
+	color: var(--Fourth-color);
 }
-
-.InstaLogo {
-	height: 2.5rem;
+.Nav__image {
+	margin-right: 1.5rem;
+	height: 5rem;
+	width: 5rem;
+}
+.Nav__image img {
+	height: 5rem;
+	width: 5rem;
 }
 
 footer {
@@ -184,6 +191,9 @@ footer {
 	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	padding: 12px 18px;
 	z-index: 1;
+}
+.dropdown-content p {
+	font-family: 'Sansita Swashed', cursive;
 }
 
 .dropdown:hover .dropdown-content {
