--- a/src/style.css
+++ b/src/style.css
@@ -314,6 +314,9 @@ footer {
 	.nav__left a {
 		font-size: 15px;
 	}
+	.Nav__image {
+		margin-right: 0;
+	}
 }
 /*Mobile devices*/
 @media screen and (max-width: 768px) and (min-width: 481px) {
