--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -91,6 +91,7 @@
 	width: 100%;
 	/* align-items: center; */
 	padding: 0.75rem;
+	border: 1px solid gray !important;
 }
 
 .chalite__img img {
@@ -193,6 +194,51 @@
 	display: flex;
 	justify-content: center;
 }
+.booked__bottom {
+	width: 30rem;
+	height: 10rem;
+	display: flex;
+}
+.l__section {
+	height: 100%;
+	width: 7rem;
+}
+.image__bot__sec {
+	border-radius: 35%;
+	width: 7rem;
+	height: 7rem;
+}
+.image__bot__sec img {
+	border-radius: 35%;
+	width: 7rem;
+	height: 7rem;
+}
+.chalet__name_ {
+	width: 100%;
+	height: 3rem;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.r__section {
+	height: 100%;
+	width: 23rem;
+	/* background-color: yellow; */
+}
+.t__rsection {
+	/* background-color: blue; */
+	width: 100%;
+	height: 7rem;
+	padding-left: 1rem;
+}
+.b__rsection {
+	width: 100%;
+	height: 3rem;
+	/* background-color: gray; */
+	display: flex;
+	justify-content: flex-end;
+}
 /* small devicess */
 
 @media screen and (max-width: 480px) and (min-width: 320px) {
@@ -254,28 +300,12 @@
 	.descrebtion {
 		padding-left: 0.75rem;
 	}
+	.booked__bottom {
+		width: 100% !important;
+	}
 }
 
 /* Iphone 5SE */
-@media screen and (max-height: 568px) and (min-width: 320px) {
-	.chalite__img img {
-		width: 3rem;
-		height: 3rem;
-	}
-
-	.chalite__name {
-		padding: 0;
-	}
-
-	.weather {
-		padding-left: 5.5rem;
-	}
-
-	.box {
-		width: 17rem;
-		padding: 0.5rem 0 0.5rem 0.5rem;
-	}
-}
 
 /* Ipad */
 @media screen and (max-width: 768px) and (min-width: 480px) {
@@ -319,7 +349,10 @@
 	.descrebtion {
 		font-size: 15px;
 	}
-
+	.chalite__img {
+		width: 6rem;
+		height: 6rem;
+	}
 	.chalite__img img {
 		width: 6rem;
 		height: 6rem;
