--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -46,6 +46,7 @@
 .name {
 	margin-left: 2.8rem;
 	margin-top: 0.5rem;
+	
 }
 
 /* end name and profile image */
@@ -56,7 +57,11 @@
 }
 
 .information {
-	font-size: 23px;
+	color: var(--Second-color);
+    text-shadow: 2px 2px 2px var(--Seventh-color);
+    font-size: 2rem;
+    font-family: 'Sansita Swashed',
+        cursive;
 }
 
 .weather {
@@ -83,6 +88,11 @@
 	padding-bottom: 1rem;
 	padding-left: 1rem;
 	padding-top: 2rem;
+	color: var(--Second-color);
+    text-shadow: 2px 2px 2px var(--Seventh-color);
+    font-size: 2rem;
+    font-family: 'Sansita Swashed',
+		cursive;
 }
 
 .box {
