--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -12,7 +12,7 @@
 .register__container {
 	width: 100%;
 	display: flex;
-	background-color: var(--Fourth-color);
+	/* background-color: var(--Fourth-color); */
 	height: 100vh;
 }
 .signUp__container {
@@ -37,15 +37,29 @@
 	flex-wrap: wrap;
 }
 .signin__form input {
-	width: 100%;
-	margin-bottom: 2%;
+    width: 100%;
+    margin-bottom: 2%;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    background: var(--Fourth-color);
 }
 
-.signin__form button {
+/* .signin__form button {
 	width: 100%;
 	padding: 10px;
 	color: var(--Eighth-color);
 	background-color: var(--Fifth-color);
+} */
+.signin__form button {
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    color: #fff !important;
+    /* color: var(--Eighth-color); */
+    background-color: var(--Fifth-color);
 }
 .signup__form {
 	width: 50%;
@@ -53,10 +67,25 @@
 	flex-direction: column;
 	flex-wrap: wrap;
 }
-.signup__form input {
+/* .signup__form input {
 	width: 100%;
 	margin-bottom: 2%;
+} */
+.signup__form input {
+    width: 100%;
+    margin-bottom: 2%;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    background: var(--Fourth-color);
 }
+
+input:focus {
+    background: var(--Eighth-color);
+    border: var(--Second-color) 2px solid;
+    transition: all .2s ease;
+}
+
 .signup__form p {
 	color: var(--First-color);
 
@@ -69,12 +98,24 @@
 	font-size: 2rem;
 	font-family: 'Sansita Swashed', cursive;
 }
-.signup__form button {
+/* .signup__form button {
 	width: 100%;
 	padding: 10px;
 	color: var(--Eighth-color);
 	background-color: var(--Fifth-color);
+} */
+
+.signup__form button {
+    width: 100%;
+    padding: 10px;
+    /* color: var(--Eighth-color); */
+    border-radius: 10px;
+    border: none;
+    color: #fff !important;
+    background-color: var(--Fifth-color);
 }
+
+
 @media screen and (max-width: 480px) and (min-width: 320px) {
 	.register__container {
 		width: 100%;
