--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@500&display=swap');
+
 :root {
 	--First-color: #00317a;
 	--Second-color: #123468;
@@ -9,15 +10,18 @@
 	--Seventh-color: #16375bb4;
 	--Eighth-color: #f8f9fab4;
 }
+
 .register__container {
 	width: 100%;
 	display: flex;
 	/* background-color: var(--Fourth-color); */
 	height: 100vh;
 }
+
 .signUp__container {
 	width: 50%;
 	display: flex;
+	text-align: center;
 	justify-content: center;
 	align-items: center;
 	border-right: 1px #c1c3c5 solid;
@@ -25,24 +29,26 @@
 
 .signIn__container {
 	width: 50%;
-
+	text-align: center;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
+
 .signin__form {
 	width: 50%;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
 }
+
 .signin__form input {
-    width: 100%;
-    margin-bottom: 2%;
-    border-radius: 10px;
-    outline: none;
-    border: none;
-    background: var(--Fourth-color);
+	width: 100%;
+	margin-bottom: 2%;
+	border-radius: 10px;
+	outline: none;
+	border: none;
+	background: var(--Fourth-color);
 }
 
 /* .signin__form button {
@@ -52,38 +58,40 @@
 	background-color: var(--Fifth-color);
 } */
 .signin__form button {
-    width: 100%;
-    padding: 10px;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    color: #fff !important;
-    /* color: var(--Eighth-color); */
-    background-color: var(--Fifth-color);
+	width: 100%;
+	padding: 10px;
+	border-radius: 10px;
+	border: none;
+	outline: none;
+	color: #fff !important;
+	/* color: var(--Eighth-color); */
+	background-color: var(--Fifth-color);
 }
+
 .signup__form {
 	width: 50%;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
 }
+
 /* .signup__form input {
 	width: 100%;
 	margin-bottom: 2%;
 } */
 .signup__form input {
-    width: 100%;
-    margin-bottom: 2%;
-    border-radius: 10px;
-    outline: none;
-    border: none;
-    background: var(--Fourth-color);
+	width: 100%;
+	margin-bottom: 2%;
+	border-radius: 10px;
+	outline: none;
+	border: none;
+	background: var(--Fourth-color);
 }
 
 input:focus {
-    background: var(--Eighth-color);
-    border: var(--Second-color) 2px solid;
-    transition: all .2s ease;
+	background: var(--Eighth-color);
+	border: var(--Second-color) 2px solid;
+	transition: all .2s ease;
 }
 
 .signup__form p {
@@ -92,12 +100,14 @@ input:focus {
 	font-size: 2rem;
 	font-family: 'Sansita Swashed', cursive;
 }
+
 .signin__form p {
 	color: var(--First-color);
 
 	font-size: 2rem;
 	font-family: 'Sansita Swashed', cursive;
 }
+
 /* .signup__form button {
 	width: 100%;
 	padding: 10px;
@@ -106,13 +116,13 @@ input:focus {
 } */
 
 .signup__form button {
-    width: 100%;
-    padding: 10px;
-    /* color: var(--Eighth-color); */
-    border-radius: 10px;
-    border: none;
-    color: #fff !important;
-    background-color: var(--Fifth-color);
+	width: 100%;
+	padding: 10px;
+	/* color: var(--Eighth-color); */
+	border-radius: 10px;
+	border: none;
+	color: #fff !important;
+	background-color: var(--Fifth-color);
 }
 
 
@@ -123,48 +133,58 @@ input:focus {
 		flex-direction: column;
 		justify-content: space-around;
 	}
+
 	.signUp__container {
 		width: 100%;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 	}
+
 	.signIn__container {
 		width: 100%;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 	}
+
 	.signin__form {
 		width: 75%;
 	}
+
 	.signup__form {
 		width: 75%;
 	}
 }
+
 /*Mobile devices*/
 @media screen and (max-width: 768px) and (min-width: 480px) {
 	.signin__form {
 		width: 75%;
 	}
+
 	.signup__form {
 		width: 75%;
 	}
 }
+
 /*Small screens, laptops*/
 @media screen and (max-width: 1024px) and (min-width: 769px) {
 	.signin__form {
 		width: 75%;
 	}
+
 	.signup__form {
 		width: 75%;
 	}
 }
+
 /*Desktops, large screens*/
 @media screen and (max-width: 1200px) and (min-width: 1025px) {
 	.signin__form {
 		width: 75%;
 	}
+
 	.signup__form {
 		width: 75%;
 	}
